# SharedControlPaper

./: .experiment.py.swp  .experiment_3.py.swp  .gitignore  .psychopy-env.yml.swp  README  README.md  experiment.py  experiment2.py  experiment_1.py  experiment_2.py  experiment_3.py  experiment_FINAL.py  pyproject.toml  requirements.txt  schematics.py  setup_env.sh  shuffling_test.txt  stopSignal_experiment.py  tweak_SSD_sampler.ipynb  utils.py  wooting_utils.py
dylibs/: libhidapi.0.dylib
experiments/: forceSensitiveStoppingTask.py
figures/: ai_assisted_proportion_ones.csv  ai_failed_proportion_ones.csv  non_ai_proportion_ones.csv
notebooks/: 01_process_force_sensitive_data.ipynb  02_generate_tables.ipynb  02_process_simple_stop_data.ipynb  03_generate_supplemental_figures.ipynb  03_process_ai_survey.ipynb  04_generate_demographics.ipynb  04_generate_stats.ipynb  05_generate_figures.ipynb  05_generate_stats.ipynb  06_generate_demographics.ipynb  06_generate_figures.ipynb  06_generate_tables.ipynb  07_generate_supplemental_figures.ipynb  07_generate_tables.ipynb  08_generate_supplemental_figures.ipynb  demographics_survey.ipynb  generate_supplemental_figures.ipynb  requirements.txt  shared_control_results.ipynb  simple_stop_qc.ipynb  stop_single_test.ipynb  survey_analysis_KA.ipynb  tweak_SSD_sampler.ipynb
old scripts/: experiment.py  experiment_1.py  experiment_2.py  experiment_3.py  simpleStopSignalTask.psyexp  simpleStopSignalTask.py
output/: proportion_of_trials_with_moment_of_inhibition.csv  shared_control_metrics_duration_of_inhibition.csv  survey_scores.csv  (+8 more)
(+420 files in other folders)
