[project]
name = "sharedcontrolpaper"
version = "0.1.0"
description = "Repository for the Shared Control Paper"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=8.32.0",
    "pickleshare>=0.7.5",
]